# FreeWILLI_wasd

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Audio_sim_1.m  CONTRIBUTING.md  Dockerfile  LICENSE  Presentation1.pptx  README.md  TCP_Audio_sim_1.m  UDP_read_array.py  UDP_read_array_rate.py  UDP_send_array.m  UDP_send_array_rate.py  block_wifi_bluetooth.sh  clicks_data.txt  example.pptx  output.txt  powerTestSleep.txt  read_data_tcp2.py  scratch.py  udp_read_1.py
C/: 1240_config.txt  BUILD  CMakeLists.txt  Ccode_clicks.txt  CrossCompileSettings.cmake  NativeCompileSettings.cmake  TDOA_estimation.cpp  TDOA_estimation.h  VectorCompileSettings.cmake  WORKSPACE  \  bazel-C  bazel-bin  bazel-out  bazel-testlogs  bazel-unit_tests  datalogger_reader.cpp  exe  filters.cpp  filters.h  grind1.txt  grind2.txt  grind3.txt  libarmadillo.12.dylib  libarmadillo.dylib  listen  makefile  makefile_old  massif.out.292472  massif.out.63507  multi_datalogger_reader.cpp  my_globals.h  out  process_data.cpp  process_data.h  requirements.txt  run_cpp_program.sh  test  toolchain.cmake  tracker_output.csv  (+3 more)
C/DummyProgram/: main.cpp  test
C/PyBind11/: CMakeLists.txt  TrackDBSCAN-Adapt-EXPPybind11.ipynb  TrackDBSCAN-Adapt-EXPPybind12.ipynb  TrackDBSCAN-Adapt-EXPPybind13.ipynb  dbscan_wrapper.cpp  kalman_filter.cpp  kalman_filter.hpp  tracker.cpp  tracker.hpp  tracker_original.cpp  tracker_output.csv
C/PyBind11/.ipynb_checkpoints/: TrackDBSCAN-Adapt-EXPPybind11-checkpoint.ipynb
C/Unit_tests/: TDOA_estimation_test.cpp  filters_test.cpp  process_data_test.cpp  utils_test.cpp
C/VectorTest/: CMakeLists.txt
C/benchmark/: CMakeLists.txt  TDOA_estimation_test.cpp  fftwf_benchmark.cpp  ftt_filter_benchmark.cpp  process_data_benchmark.cpp  simulation_benchmark.cpp  threashold_benchmark.cpp
C/build-cross/: CMakeCache.txt  Makefile  cmake_install.cmake
C/build-cross/benchmark/: Makefile  cmake_install.cmake
C/build-cross/src/: Makefile  cmake_install.cmake
C/build-cross/tests/: CTestTestfile.cmake  Makefile  UnitTests[1]_include.cmake  cmake_install.cmake
C/build_src/: create_swap.sh  listen_Pi4  listen_RM101  makefile_Pi4  makefile_RM101  run_cpp_program.sh
C/config_files/: 1550_config.txt  VLA.json  config.json  volumetric.json  wirewalker.json
C/deployment_files/: 2023-11-5-1-1-1-0_detection  2023-11-5-1-1-1-0_doa  2023-11-5-1-1-1-0_tdoa  2023-11-5-1-1-58-554600_detection  2023-11-5-1-1-58-554600_doa  2023-11-5-1-1-58-554600_tdoa  2023-11-5-1-2-59-792000_detection  2023-11-5-1-2-59-792000_doa  2023-11-5-1-2-59-792000_tdoa  2023-11-5-1-5-3-491920_detection  2023-11-5-1-5-3-491920_doa  2023-11-5-1-5-3-491920_tdoa  2023-11-5-1-7-7-377840_detection  2023-11-5-1-7-7-377840_doa  2023-11-5-1-7-7-377840_tdoa  2023-11-5-1-9-11-86440_detection  2023-11-5-1-9-11-86440_doa  2023-11-5-1-9-11-86440_tdoa  2024-6-17-13-7-10-770086_detection  2024-6-17-13-7-10-770086_doa  2024-6-17-13-7-10-770086_tdoa  2024-6-17-13-7-29-667686_detection  2024-6-17-13-7-29-667686_doa  2024-6-17-13-7-29-667686_tdoa  2024-6-17-13-8-31-415966_detection  2024-6-17-13-8-31-415966_doa  2024-6-17-13-8-31-415966_tdoa  error_log.txt
C/deployment_files_OLD/: 2024-8-20-17-11-2-809475_detection  2024-8-20-17-11-2-809475_doa  2024-8-20-17-11-2-809475_tdoa  2024-8-20-17-4-7-795562_detection  2024-8-20-17-4-7-795562_doa  2024-8-20-17-4-7-795562_tdoa
C/deployment_files_R/: 2024-8-22-16-6-20-420260_detection  2024-8-25-13-17-27-954560_detection
C/filters/: highpass_taps@101_cutoff@20k_window@hamming_fs@100k.txt  highpass_taps@31_cutoff@10k_window@hamming_fs@100k.txt
C/libs/sigpack/: CMakeLists.txt
C/other_src/: main  main.cpp  main_arma.cpp  main_sig.cpp  no_sig.cpp
C/receiver_pos/: SOCAL_H_72_HS_harp4chPar_recPos.txt
C/sigpack/: CMakeLists.txt
C/src/: .multi_datalogger_reader.cpp.swp  CMakeLists.txt  TDOA_estimation.cpp  TDOA_estimation.h  buffer_writer.h  buffer_writter.h  custom_types.h  dbscan_wrapper.cpp  filters.cpp  filters.h  firmware_config.h  kalman_filter.cpp  kalman_filter.h  listener_thread.cpp  listener_thread.h  main.cpp  main_utils.cpp  main_utils.h  multi_datalogger_reader.cpp  my_globals.h  onnx_model.cpp  onnx_model.h  pch.h  process_data.cpp  process_data.h  processor_thread.cpp  processor_thread.h  runtime_config.h  session.h  socket_manager.cpp  socket_manager.h  tracker.cpp  tracker.h  utils.cpp  utils.h
C/tests/: CMakeLists.txt  TDOA_estimation_test.cpp  filters_test.cpp  process_data_test.cpp  utils_test.cpp
C/unit_tests/: TDOA_estimation_test.cpp  filters_test.cpp
listener_program/: .clang-tidy  231105_090101_000000_tracker  CMakeLists.txt  CrossCompileSettings.cmake  CrossCompileSettingsStatic.cmake  Dockerfile  NativeCompileSettings.cmake  compile_commands.json  deployment_files250315_212733_678879  toolchain.cmake  training_data.csv  unblock_wifi_bluetooth.sh
listener_program/ML_models/: model_quantized_static.onnx  model_quantized_static103.onnx  scaler_params103.json
listener_program/benchmark/: CMakeLists.txt  ftt_filter_benchmark.cpp  simulation_benchmark.cpp  threashold_benchmark.cpp
listener_program/config_files/: VLA.json  integration_test.json  volumetric.json  wirewalker.json
listener_program/receiver_pos/: SOCAL_H_72_HS_harp4chPar_VLA.txt  SOCAL_V_03_harp4chPar_recPos.txt  wirewalker_exper_12112024.txt
listener_program/src/: CMakeLists.txt  firmware_1240.cpp  firmware_1240.h  firmware_config.h  listener_thread.cpp  listener_thread.h  main.cpp  main_utils.cpp  main_utils.h  pch.h  pipeline.cpp  pipeline.h  pipeline_variables.h  runtime_config.h  session.cpp  session.h  shared_data_manager.cpp  shared_data_manager.h  socket_variables.h  utils.cpp  utils.h
listener_program/tests/: CMakeLists.txt  Orig_CMakeLists.txt  firmware_1240_test.cpp  process_data_test.cpp  shared_data_manager_test.cpp  utils_test.cpp
listener_program/tracks/: 231105_090101_000000_tracker_103  231105_090101_000000_tracker_132  231105_090101_000000_tracker_164
listener_program/utility_scripts/: BenchmarkX  HarpListenX  UnitTestsX  copy_binary_Mac2Pi.sh  copy_binary_Ubuntu2Mac.sh
(+356 files in other folders)
